# flownote-service

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  docker-compose.yml  하네스 엔지니어링.md
.claude/: README.md  config.example.toml  settings.json
.codex/: README.md  config.toml
docs/: DESIGN.md  FRONTEND.md  HARNESS.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  mobile-was-architecture.md
flownote-API/: .gitignore  .vercelignore  Dockerfile  pyproject.toml  vercel.json
flownote-API/app/: canvas_socket.py  core_api.py  database.py  gateway.py  main.py  models.py  schemas.py
flownote-API/app/api/: agent_router.py  chat_router.py  social_router.py
flownote-API/app/services/: agent_service.py  chat_service.py  ollama_client.py
flownote-API/mcpServers/: common.py  note_tools.py  schedule_tools.py  task_tools.py
flownote-API/mcp_servers/: planner_mcp.py
flownote-API/tests/: test_canvas_socket.py
flownote-ai/: README.md  pyproject.toml
flownote-ai/app/: main.py
flownote-ai/app/api/: agent_note_router.py  agent_router.py  market_router.py
flownote-ai/app/services/: agent_note_service.py  agent_note_store.py  chat_service.py
flownote-ai/mcpServers/: note_tools.py  registry.py  schedule_tools.py
flownote-canvas/: Dockerfile  README.md  go.mod  main.go
flownote-mobile/: .dockerignore  .env.example  .gitignore  App.tsx  Dockerfile  README.md  app.json  eas.json  package-lock.json  package.json
flownote-next/: .dockerignore  .vercelignore  Dockerfile  README.md  eslint.config.mjs  (+5 more)
(+394 files in other folders)
