[project]
name = "16-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "datetime>=6.0",
    "fastapi[standard]>=0.129.0",
    "finance-datareader>=0.9.102",
    "google-genai>=1.63.0",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
