[project]
name = "16-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "fastapi[standard]>=0.129.0",
    "finance-datareader>=0.9.102",
    "google-genai>=1.63.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.11.0",
    "redis>=5",
    "uvicorn>=0.41.0",
    "yfinance>=0.2.66",
]

[project.scripts]
app = "app.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
